# shlegel_cw_3

./: .coverage  README.md  pyproject.toml
src/: main_code.py  module.py  operations.json  utils.py
tests/: conftest.py  path_test.json  test_module.py  test_utils.py
