[tool.poetry]
name = "shlegel-cw-3"
version = "0.1.0"
description = ""
authors = ["shlegel <sveta.shlegel@mail.ru>"]
readme = "README.md"
packages = [{include = "shlegel_cw_3"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
